testdata/simple/snapshop-template.yaml
---
# Source: frontend/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: 'frontend-0.0.1'
  namespace: default
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/component: frontend
  ports:
    - name: http
      port: 80
---
# Source: frontend/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: 'frontend-0.0.1'
  namespace: default
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
      app.kubernetes.io/component: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: frontend
        app.kubernetes.io/component: frontend
    spec:
      containers:
        - name: frontend
          image: 'nginx:latest'
          ports:
            - name: http
              protocol: TCP
              containerPort: 80
---
# Source: frontend/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: 'frontend-0.0.1'
  namespace: default
spec:
  tls:
    - hosts: ['foo.com']
      secretName: foo-com-cert
  rules:
    - host: foo.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: frontend
                port:
                  name: http
                  number: 80
